--- a/README.adoc
+++ b/README.adoc
@@ -2,4 +2,7 @@
 
 image:https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&metric=alert_status[link="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"]
 
+:toc:
+:url-gitlab: https://gitlab.eclipse.org
 
+== Section 1
