--- a/README.adoc
+++ b/README.adoc
@@ -22,8 +22,14 @@ image::cc_config_2.png[config, 400]
 The control center module configuration page allows admins to set the following options at the system level:
 
 .EM Framework Management Config Options
-[cols="1,2,1,3"]
+[%header,cols="1,2,1,3"]
 |===
+|Section
+|Option
+|Type
+|Description
+
+[.color-bg-accent-emphasis]
 .2+|Section
 |Cell in column 1, row 1
 |Cell in column 2, row 1
