--- a/README.adoc
+++ b/README.adoc
@@ -31,7 +31,7 @@ The control center module configuration page allows admins to set the following 
 
 
 .2+|Section
-|[.color-bg-accent-emphasis]*Cell in column 1, row 1*
+|[.color-bg-accent-emphasis]#Cell in column 1, row 1#
 |Cell in column 2, row 1
 |Cell in column 3, row 1
 
