--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ Andrew Poppe <andrew.poppe@yale.edu>
 :imagesdir: docs/images
 :icons: font
 :sectlinks: true
-:table-stripes: even
+:table-stripes: odd
 
 image:https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&metric=alert_status[link="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"]
 
